[package]
name = "bdk_kyoto"
version = "0.2.0"
authors = ["Rob <rustaceanrob@protonmail.com>", "Bitcoin Dev Kit Developers"]
description = "BDK blockchain integration using P2P light client Kyoto"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoindevkit/bdk-kyoto"
documentation = "https://docs.rs/bdk-kyoto"
readme = "README.md"
keywords = ["bitcoin", "peer-to-peer", "light-client"]
edition = "2021"
rust-version = "1.63.0"

[dependencies]
bdk_chain = { version = "0.20.0" }
kyoto-cbf = { version = "0.4.0", default-features = false, features = ["dns"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[dependencies.bdk_wallet]
version = "1.0.0-beta.5"
optional = true

[features]
default = ["wallet", "rusqlite", "events", "callbacks", "trace"]
trace = ["tracing", "tracing-subscriber"]
wallet = ["bdk_wallet"]
rusqlite = ["kyoto-cbf/database"]
callbacks = []
events = []

[dev-dependencies]
tokio = { version = "1.37", features = ["full"], default-features = false }
anyhow = "1.0"
bdk_testenv = "0.9.0"
tempfile = "3.12.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }


[[example]]
name = "signet"
required-features = ["rusqlite", "callbacks"]

[[example]]
name = "wallet"
required-features = ["wallet", "trace", "rusqlite", "callbacks"]

[[example]]
name = "events"
required-features = ["wallet", "rusqlite", "events"]
