[package]
name = "bdk_kyoto"
version = "0.14.0"
authors = ["Rob <rustaceanrob@protonmail.com>", "Bitcoin Dev Kit Developers"]
description = "BDK blockchain integration using P2P light client Kyoto"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bitcoindevkit/bdk-kyoto"
documentation = "https://docs.rs/bdk-kyoto"
readme = "README.md"
keywords = ["bitcoin", "peer-to-peer", "light-client"]
edition = "2021"
rust-version = "1.84.0"

[dependencies]
bdk_wallet = { version = "2" }
kyoto-cbf = { version = "0.14.0", default-features = false, features = ["rusqlite"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
anyhow = "1.0"
bdk_testenv = { version = "0.13.0", default-features = true }
tempfile = "3.12.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }


[[example]]
name = "example"
